# gl-plot

./: .gitignore  GLPlot.hs  Main.hs  Test.hs  flake.nix  gl-plot.cabal
Graphics/Rendering/: GLPlot.hs
Graphics/Rendering/GLPlot/: Lenses.hs  Shaders.hs  Text.hs  Types.hs
src/Graphics/Rendering/: GLPlot.hs
src/Graphics/Rendering/GLPlot/: Shaders.hs  Text.hs  Types.hs
