name:                gl-plot
version:             0.1.0.0
synopsis:            Fast real-time plotting with OpenGL
-- description:         
homepage:            http://github.com/bgamari/gl-plot
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Graphics.Rendering.GLPlot
  other-modules:       Graphics.Rendering.GLPlot.Types,
                       Graphics.Rendering.GLPlot.Lenses,
                       Graphics.Rendering.GLPlot.Shaders,
                       Graphics.Rendering.GLPlot.Text
  build-depends:       base >=4.6,
                       vector >=0.10,
                       transformers,
                       either,
                       OpenGL,
                       GLFW-b,
                       lens >=3.9,
                       linear >=1.1,
                       linear-opengl,
                       stm >=2.4,
                       cairo,
                       pango,
                       bytestring

executable glplot-test
  main-is:             Test.hs
  ghc-options:         -threaded
  build-depends:       base >=4.6,
                       vector >=0.10,
                       transformers,
                       either,
                       OpenGL,
                       GLFW-b,
                       lens >=3.9,
                       linear >=1.1,
                       linear-opengl,
                       stm >=2.4,
                       cairo,
                       pango,
                       bytestring
